style.css
/* ... */
.decorate_flower--three {
    position: absolute;
    top: 150px;
    right: 235px;
    transform: scale(0);
    animation: scaleCricle 3s var(--t) forwards ease-in-out;
}

.smiley__icon {
    position: absolute;
    bottom: 180px;
    left: 600px;
    transform: scale(0);
    animation: scaleCricle 3s 15s forwards ease-in-out;
}


.box__letter {
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, .5);
    width: 100%;
    height: 100%;
    z-index: 10;
    display: none;
}

.box__letter .letter__border {
    position: absolute;
    width: 55vw;
    height: 450px;
    background-color: var(--color-white);
    border-radius: 27px;
    padding: 17px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: none;
}

.letter__border .close {
    position: absolute;
    right: -10px;
    top: -10px;
    width: 30px;
    height: 30px;
    background-color: var(--color-white);
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
    cursor: pointer;
}

.letter__border .letter {
    width: 100%;
    height: 100%;
    background-color: var(--color-bg-letter);
    border-radius: 10px;
    padding-top: 15px;
}

.letter__border .letter .title__letter {
    text-align: center;
    font-family: 'Dancing Script', cursive;
    font-weight: bold;
    font-size: 2.4rem;
}

.title__letter .fa-solid {
    margin-left: 5px;
    font-size: 1.3rem;
}

.letter__border .letter .content__letter {
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    padding-top: 1.5rem;
    padding-bottom: 70px;
}

.letter__border .letter .content__letter .left {
    position: relative;
    width: 50%;
    height: 100%;
    padding: 1.7rem;
    border-right: 3px solid var(--color-border);
}

.content__letter .left #heart__letter {
    opacity: 0;
    width: 100%;
}

#heart__letter.animationOp {
    animation: opacityHeart 1s 1s forwards;
}

@keyframes opacityHeart {
    to {
        opacity: 1;
    }
}

.content__letter .left .heart {
    position: absolute;
    opacity: 0;
}

.content__letter .left .heart.animation {
    animation: scaleHeartLetter 1s var(--t) infinite ease-in-out;
}

@keyframes scaleHeartLetter {
    0% {
        opacity: 1;
        transform: scale(0);
    }

    10% {
        opacity: 1;
        transform: scale(1.3);
    }

    20% {
        opacity: 1;
        transform: scale(0.7);
    }

    30%,
    100% {
        opacity: 1;
        transform: scale(1);
    }

}

.content__letter .left .heart_1 {
    top: 90px;
    left: 30px;
}

.content__letter .left .heart_2 {
    top: 20px;
    right: 70px;
}

.content__letter .left .heart_3 {
    bottom: 50px;
    left: 145px;
}

.content__letter .left .heart_4 {
    top: 140px;
    right: 35px;
}

.content__letter .right {
    position: relative;
    width: 50%;
}

.content__letter .right .love__img {
    opacity: 0;
    position: absolute;
    right: 20px;
    top: -100px;
}

.love__img.animationOp {
    animation: opacityHeart 1s 1s forwards;
}

.content__letter .right .text__letter {
    margin-top: 60px;
    padding: 20px 15px 10px 15px;
    font-family: 'Dancing Script', cursive;
    font-size: 1.3rem;
}

.content__letter .right #mewmew {
    position: absolute;
    bottom: 0;
    right: 0;
    opacity: 0;
}

#mewmew.animationOp {
    animation: opacityHeart 1s 1s forwards;
}
/* ... */

